# trajectory_capturing

./: .gitignore  CMakeLists.txt  capturingMain.cpp  generatorMain.cpp  main.cpp  pythonInterface.cpp
Capturing/: CMakeLists.txt  Capturing2D.cpp  CapturingGraph.cpp  CapturingSolution.cpp  Segment.cpp
Capturing/Header/: Capturing2D.h  CapturingGraph.h  CapturingMetaData.h  CapturingSolution.h  Segment.h
Capturing/Neighborhoods/: Neighborhood.h  OuterSharedSegmentsVertices.cpp  OuterSharedSegmentsVertices.h
Generator/: CMakeLists.txt  Cap2DGenerator.cpp
Generator/Header/: Cap2DGenerator.h
Generator/Wrapper/: GeneratorWrapper.hpp
Import/: CMakeLists.txt  Imports.cpp  Imports.h  XmlWrapper.cpp  XmlWrapper.h
MacroTestingFramework/: CMakeLists.txt  CapturingInstanceContainer.cpp  CapturingInstanceContainer.h  InstanceGenerator.h  MacroTestingInstance.hpp  TestRawPoints.hpp  TestRawPointsContainer.h
MacroTestingFramework/Wrapper Templates/: Generator.h  Solution.h  Solver.h
Solver/: CMakeLists.txt
Solver/Metaheuristics/: EvolutionComputation.cpp  EvolutionComputation.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  TabuSearch.cpp  TabuSearch.h
Solver/Solver/: AllEdgesIPSolver.cpp  AllEdgesIPSolver.h  CplexSettings.h  GreedySolver.cpp  GreedySolver.h  ThesisIPSolver.cpp  ThesisIPSolver.h
Solver/Wrapper/: SolverWrapper.hpp
Tests/: CGALTests.cpp  GraphTests.cpp  MacroTestFrameWorkTests.cpp
Utilities/: CMakeLists.txt  GeoUtil.h  PathNormifier.h
Utilities/Graph/: undirectedAdjGraph.cpp  undirectedAdjGraph.h  undirectedGraph.cpp  undirectedGraph.h  undirectedMatrixGraph.cpp  undirectedMatrixGraph.h
Visualization/: CMakeLists.txt  SegmentVisualization.cpp  SegmentVisualization.h  simple_svg_1.0.0.hpp
cmake/: FindCGAL.cmake  FindCPLEX.cmake  FindIPE.cmake  FindSQLITE.cmake  shared_library_util.h  util.cmake  util.standalone.cmake
cplex/: cplex.hpp
